--- a/app/templates/desktop/style/create_button_3.css
+++ b/app/templates/desktop/style/create_button_3.css
@@ -1,4 +1,9 @@
 #create-button-3 {
+	/* MOBILE */
+	@media screen and (max-width: 480px) {
+		display: none;
+	}
+
 	margin-bottom: 16px;
 
 	width: 468px;
